<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.exercicio.hqzatorre.previsaodotempo.activities.MainActivity">

    <LinearLayout
        android:id="@+id/display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/esquerda"
            android:layout_width="145dp"
            android:layout_height="123dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teste" />

            <TextView
                android:id="@+id/temperatura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teste" />

            <TextView
                android:id="@+id/txt_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teste" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/temperaturaSegundoDia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/teste" />

                <TextView
                    android:id="@+id/temperaturaTerceiroDia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/teste" />

                <TextView
                    android:id="@+id/temperaturaQuartoDia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/teste" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/direita"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"></LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/list_previsoes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignStart="@+id/display"
        android:layout_below="@+id/display"
        android:layout_above="@+id/btn_busca"
        android:layout_alignEnd="@+id/btn_busca" />

    <EditText
        android:id="@+id/txt_cidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hint_cidade"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/list_cidades" />

    <Button
        android:id="@+id/btn_busca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_buscar_btn"
        android:layout_alignBottom="@+id/txt_cidade"
        android:layout_alignEnd="@+id/list_cidades" />

    <ListView
        android:id="@+id/list_cidades"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        android:layout_below="@id/display"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="145dp"/>


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/chuvoso"
        android:importantForAccessibility="no"
        android:layout_alignTop="@+id/display"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/list_previsoes" />
</RelativeLayout>
